--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=insurance
 server.port=8090
 spring.datasource.url=jdbc:mysql://localhost:3306/auto_insurance_db
 spring.datasource.username=root
-spring.datasource.password=pass
+spring.datasource.password=sugun506
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maximum-pool-size=10
 
